# gmail-reader

./: .gitignore  README.md  pyproject.toml
gmail_reading/: __init__.py  connection.py  main.py  messages.py
tests/: test_gmail_reading.py
